main branch, deleted and moved timer files

--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^22.1.4"
-  }
+  },
+  "author": "Karry <hello@devacademy.co.nz>"
 }
-
